--- a/index.html
+++ b/index.html
@@ -1,153 +1,151 @@
+Here's the improved version of your code with fixed links and optimized structure:
+
+```html
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Massively by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Portfolio - Yatir Bitan</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="assets/css/main.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
-	</head>
-	<body class="is-preload">
+<head>
+    <meta charset="UTF-8">
+    <title>Portfolio - Yatir Bitan</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+</head>
+<body class="is-preload">
 
-		<!-- Wrapper -->
-		<div id="wrapper" class="fade-in">
+    <!-- Wrapper -->
+    <div id="wrapper" class="fade-in">
 
-			<!-- Intro -->
-			<div id="intro">
-				<h1>My Portfolio</h1>
-				<p>
-					I am currently pursuing a Master's degree in Economics and Business Analytics at Johannes Kepler Universität Linz. Driven by a strong passion for coding and continuous learning, I leverage my analytical skills and data analyst experience to transform data into actionable insights. I thrive as an effective team player with excellent communication skills, always ready to collaborate and contribute enthusiastically. 
-					<a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/">@LinkedIn</a>
-				</p>
-				<ul class="actions">
-					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-				</ul>
-			</div>
+        <!-- Intro -->
+        <div id="intro">
+            <h1>My Portfolio</h1>
+            <p>
+                I am currently pursuing a Master's degree in Economics and Business Analytics at Johannes Kepler Universität Linz. Driven by a strong passion for coding and continuous learning, I leverage my analytical skills and data analyst experience to transform data into actionable insights. I thrive as an effective team player with excellent communication skills, always ready to collaborate and contribute enthusiastically.
+                <a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/">@LinkedIn</a>
+            </p>
+            <ul class="actions">
+                <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+            </ul>
+        </div>
 
-			<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="logo">Portfolio</a>
-			</header>
+        <!-- Header -->
+        <header id="header">
+            <a href="index.html" class="logo">Portfolio</a>
+        </header>
 
-			<!-- Nav -->
-			<nav id="nav">
-				<ul class="links">
-					<li class="active"><a href="index.html">Projects</a></li>
-				</ul>
-				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/Yatir1990" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-				</ul>
-			</nav>
+        <!-- Nav -->
+        <nav id="nav">
+            <ul class="links">
+                <li class="active"><a href="index.html">Projects</a></li>
+            </ul>
+            <ul class="icons">
+                <li><a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/Yatir1990" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+            </ul>
+        </nav>
 
-			<!-- Main -->
-			<div id="main">
+        <!-- Main -->
+        <div id="main">
 
-				<!-- Featured Post -->
-				<article class="post featured">
-					<header class="major">
-						<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb">Market Basket Analysis</a></h2>
-						<p>Analyzing a retail company's randomized sales data to uncover purchasing patterns and associations between frequently bought products using data preprocessing, feature engineering, and market basket analysis techniques, including the FP-Growth algorithm. The insights derived from this analysis aim to optimize product placement and promotions, ultimately enhancing sales strategy and customer satisfaction.</p>
-					</header>
-					<a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb" class="image main"><img src="images/cover_image.jpg" alt="Market Basket Analysis"></a>
-					<ul class="actions special">
-						<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb" class="button large">View Project</a></li>
-					</ul>
-				</article>
+            <!-- Featured Post -->
+            <article class="post featured">
+                <header class="major">
+                    <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb">Market Basket Analysis</a></h2>
+                    <p>Analyzing a retail company's randomized sales data to uncover purchasing patterns and associations between frequently bought products using data preprocessing, feature engineering, and market basket analysis techniques, including the FP-Growth algorithm. The insights derived from this analysis aim to optimize product placement and promotions, ultimately enhancing sales strategy and customer satisfaction.</p>
+                </header>
+                <a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb" class="image main"><img src="images/cover_image.jpg" alt="Market Basket Analysis"></a>
+                <ul class="actions special">
+                    <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb" class="button large">View Project</a></li>
+                </ul>
+            </article>
 
-				<!-- Featured Post -->
-				<article class="post featured">
-					<header class="major">
-						<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/NashvilleHousing%20ETL%20project.sql">Data Preprocessing</a></h2>
-						<p>Processing raw housing data from Nashville by cleaning and transforming it into a structured format in SQL Server. This transformation involved organizing and standardizing the data to enhance its usability for comprehensive analysis and insights.</p>
-					</header>
-					<a href="https://github.com/Yatir1990/Portfolio/blob/main/NashvilleHousing%20ETL%20project.sql" class="image main"><img src="images/nashville.jpg" alt="Data Cleaning in SQL"></a>
-					<ul class="actions special">
-						<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/NashvilleHousing%20ETL%20project.sql" class="button large">View Project</a></li>
-					</ul>
-				</article>
+            <!-- Featured Post -->
+            <article class="post featured">
+                <header class="major">
+                    <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/NashvilleHousing%20ETL%20project.sql">Data Preprocessing</a></h2>
+                    <p>Processing raw housing data from Nashville by cleaning and transforming it into a structured format in SQL Server. This transformation involved organizing and standardizing the data to enhance its usability for comprehensive analysis and insights.</p>
+                </header>
+                <a href="https://github.com/Yatir1990/Portfolio/blob/main/NashvilleHousing%20ETL%20project.sql" class="image main"><img src="images/nashville.jpg" alt="Data Cleaning in SQL"></a>
+                <ul class="actions special">
+                    <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/NashvilleHousing%20ETL%20project.sql" class="button large">View Project</a></li>
+                </ul>
+            </article>
 
-				<!-- Featured Post -->
-				<section class="posts">
-					<article>
-						<header>
-							<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql">COVID 19 Data Exploration</a></h2>
-						</header>
-						<a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql" class="image fit"><img src="images/covid.jfif" alt="COVID 19 Data Exploration"></a>
-						<p>Utilizing SQL Server to delve into comprehensive global COVID-19 data, examining trends, patterns, and insights to aid in understanding the pandemic's impact across different regions and populations. This exploration involves querying and analyzing vast datasets to uncover valuable epidemiological and public health insights.</p>
-						<ul class="actions special">
-							<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql" class="button">View Project</a></li>
-						</ul>
-					</article>
+            <!-- Other Posts -->
+            <section class="posts">
 
-				<!-- Featured Post -->
-				<article class="post featured">
-					<article>
-						<header>
-							<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb">Movie Correlation</a></h2>
-						</header>
-						<a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="image fit"><img src="images/movies.jpg" alt="Movie Correlation"></a>
-						<p>Employing Pandas, Matplotlib, and Seaborn to conduct a detailed analysis of factors influencing substantial revenue in the movie industry. This involves examining variables such as genre, budget, marketing spend, release timing, and critical acclaim to identify correlations and trends that drive box office success and inform strategic decisions in film production and distribution.</p>
-						<ul class="actions special">
-							<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="button">View Project</a></li>
-						</ul>
-					</article>
-					
-				<!-- Featured Post -->
-				<article class="post featured">
-					<article>
-						<header>
-							<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike-Sharing%20Portfolio%20Project.Rmd">Bike Sharing data Analysis</a></h2>
-						</header>
-						<a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike-Sharing%20Portfolio%20Project.Rmd" class="image fit"><img src="images/Bicycle.jpg" alt="Bike Sharing Project"></a>
-						<p>Offering a thorough analysis, visualizations, actionable insights, and strategic recommendations customized for the marketing team and stakeholders. By leveraging data-driven approaches, it ensures alignment with business objectives and maximizes return on investment (ROI).</p>
-						<ul class="actions special">
-							<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike-Sharing%20Portfolio%20Project.Rmd" class="button">View Project</a></li>
-						</ul>
-					</article>
-				</section>
+                <!-- Post -->
+                <article>
+                    <header>
+                        <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql">COVID 19 Data Exploration</a></h2>
+                    </header>
+                    <a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql" class="image fit"><img src="images/covid.jfif" alt="COVID 19 Data Exploration"></a>
+                    <p>Utilizing SQL Server to delve into comprehensive global COVID-19 data, examining trends, patterns, and insights to aid in understanding the pandemic's impact across different regions and populations. This exploration involves querying and analyzing vast datasets to uncover valuable epidemiological and public health insights.</p>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql" class="button">View Project</a></li>
+                    </ul>
+                </article>
 
-			</div>
+                <!-- Post -->
+                <article>
+                    <header>
+                        <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb">Movie Correlation</a></h2>
+                    </header>
+                    <a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="image fit"><img src="images/movies.jpg" alt="Movie Correlation"></a>
+                    <p>Employing Pandas, Matplotlib, and Seaborn to conduct a detailed analysis of factors influencing substantial revenue in the movie industry. This involves examining variables such as genre, budget, marketing spend, release timing, and critical acclaim to identify correlations and trends that drive box office success and inform strategic decisions in film production and distribution.</p>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="button">View Project</a></li>
+                    </ul>
+                </article>
 
-			<!-- Footer -->
-			<footer id="footer">
-				<section>
-					<h3>Location</h3>
-					<p><a href="#">Linz, Austria</a></p>
-				</section>
-				<section>
-					<h3>Email</h3>
-					<p><a href="mailto:yatir20@gmail.com">yatir20@gmail.com</a></p>
-				</section>
-				<section>
-					<h3>Social</h3>
-					<ul class="icons alt">
-						<li><a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/Yatir1990" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					</ul>
-				</section>
-			</footer>
+                <!-- Post -->
+                <article>
+                    <header>
+                        <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike-Sharing%20Portfolio%20Project.Rmd">Bike Sharing Data Analysis</a></h2>
+                    </header>
+                    <a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike-Sharing%20Portfolio%20Project.Rmd" class="image fit"><img src="images/Bicycle.jpg" alt="Bike Sharing Project"></a>
+                    <p>Offering a thorough analysis, visualizations, actionable insights, and strategic recommendations customized for the marketing team and stakeholders. By leveraging data-driven approaches, it ensures alignment with business objectives and maximizes return on investment (ROI).</p>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike-Sharing%20Portfolio%20Project.Rmd" class="button">View Project</a></li>
+                    </ul>
+                </article>
 
-			<!-- Copyright -->
-			<div id="copyright">
-				<ul><li>&copy; Yatir Bitan</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-			</div>
+            </section>
 
-		</div>
+        </div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+        <!-- Footer -->
+        <footer id="footer">
+            <section>
+                <h3>Location</h3>
+                <p><a href="#">Linz, Austria</a></p>
+            </section>
+            <section>
+                <h3>Email</h3>
+                <p><a href="mailto:yatir20@gmail.com">yatir20@gmail.com</a></p>
+            </section>
+            <section>
+                <h3>Social</h3>
+                <ul class="icons alt">
+                    <li><a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://github.com/Yatir1990" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                </ul>
+            </section>
+        </footer>
 
-	</body>
-</html>
+        <!-- Copyright -->
+        <div id="copyright">
+            <ul><li>&copy; Yatir Bitan</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+        </div>
+
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js
