--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Massively by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Portfolio - Yatir Bitan</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="assets/css/main.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
-	</head>
-	<body class="is-preload">
+<head>
+    <meta charset="UTF-8">
+    <title>Portfolio - Yatir Bitan</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+</head>
+<body class="is-preload">
 
-		<!-- Wrapper -->
-		<div id="wrapper" class="fade-in">
+    <!-- Wrapper -->
+    <div id="wrapper" class="fade-in">
 
-			<!-- Intro -->
-			<div id="intro">
-				<h1>Portfolio - Yatir Bitan</h1>
-				<p>
-					I am currently pursuing a Master's degree in Economics and Business Analytics at Johannes Kepler Universität Linz. Driven by a strong passion for coding and continuous learning, I leverage my analytical skills and data analyst experience to transform data into actionable insights. I thrive as an effective team player with excellent communication skills, always ready to collaborate and contribute enthusiastically. 
-					<a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/">@YatirBitan</a>
-				</p>
-				<ul class="actions">
-					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-				</ul>
-			</div>
+        <!-- Intro -->
+        <div id="intro">
+            <h1>Portfolio - Yatir Bitan</h1>
+            <p>
+                I am currently pursuing a Master's degree in Economics and Business Analytics at Johannes Kepler Universität Linz. Driven by a strong passion for coding and continuous learning, I leverage my analytical skills and data analyst experience to transform data into actionable insights. I thrive as an effective team player with excellent communication skills, always ready to collaborate and contribute enthusiastically. 
+                <a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/">@YatirBitan</a>
+            </p>
+            <ul class="actions">
+                <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+            </ul>
+        </div>
 
-			<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="logo">Portfolio</a>
-			</header>
+        <!-- Header -->
+        <header id="header">
+            <a href="index.html" class="logo">Portfolio</a>
+        </header>
 
-			<!-- Nav -->
-			<nav id="nav">
-				<ul class="links">
-					<li class="active"><a href="index.html">Projects</a></li>
-				</ul>
-				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/Yatir1990" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-				</ul>
-			</nav>
+        <!-- Nav -->
+        <nav id="nav">
+            <ul class="links">
+                <li class="active"><a href="index.html">Projects</a></li>
+            </ul>
+            <ul class="icons">
+                <li><a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/Yatir1990" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+            </ul>
+        </nav>
 
-			<!-- Main -->
-			<div id="main">
+        <!-- Main -->
+        <div id="main">
 
             <!-- Featured Post -->
             <article class="post featured">
@@ -145,4 +145,10 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+
+</body>
+</html>
