--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Portfolio - Yatir Bitan</h1>
             <p>
                 I am currently pursuing a Master's degree in Economics and Business Analytics at Johannes Kepler Universität Linz. Driven by a strong passion for coding and continuous learning, I leverage my analytical skills and data analyst experience to transform data into actionable insights. I thrive as an effective team player with excellent communication skills, always ready to collaborate and contribute enthusiastically. 
-                <a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/">@YatirBitan</a>
+                <a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/">@LinkedIn</a>
             </p>
             <ul class="actions">
                 <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
