--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio - Yatir Bitan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="Portfolio of Yatir Bitan showcasing projects on data analysis, business analytics, and coding.">
+    <title>Portfolio - Yatir Bitan</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
 </head>
@@ -61,6 +62,18 @@
             </article>
 
             <!-- Featured Post -->
+            <article>
+                <header>
+                    <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid_19%20_Data_Exploration.sql">COVID 19 Data Exploration</a></h2>
+                </header>
+                <a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid_19%20_Data_Exploration.sql" class="image fit"><img src="images/covid.jfif" alt="COVID 19 Data Exploration"></a>
+                <p>Utilizing SQL Server to delve into comprehensive global COVID-19 data, examining trends, patterns, and insights to aid in understanding the pandemic's impact across different regions and populations. This exploration involves querying and analyzing vast datasets to uncover valuable epidemiological and public health insights.</p>
+                <ul class="actions special">
+                    <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid_19%20_Data_Exploration.sql" class="button">View Project</a></li>
+                </ul>
+            </article>
+           
+            <!-- Featured Post -->
             <article class="post featured">
                 <header class="major">
                     <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Data_Preprocessing.sql">Data Preprocessing</a></h2>
@@ -72,46 +85,29 @@
                 </ul>
             </article>
 
-            <!-- Other Posts -->
-            <section class="posts">
+            <!-- Featured Post -->
+            <article>
+                <header>
+                    <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb">Movie Correlation</a></h2>
+                </header>
+                <a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb" class="image fit"><img src="images/movies.jpg" alt="Movie Correlation"></a>
+                <p>Employing Pandas, Matplotlib, and Seaborn to conduct a detailed analysis of factors influencing substantial revenue in the movie industry. This involves examining variables such as genre, budget, marketing spend, release timing, and critical acclaim to identify correlations and trends that drive box office success and inform strategic decisions in film production and distribution.</p>
+                <ul class="actions special">
+                    <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb" class="button">View Project</a></li>
+                </ul>
+            </article>
 
-                <!-- Post -->
-                <article>
-                    <header>
-                        <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid_19%20_Data_Exploration.sql">COVID 19 Data Exploration</a></h2>
-                    </header>
-                    <a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid_19%20_Data_Exploration.sql" class="image fit"><img src="images/covid.jfif" alt="COVID 19 Data Exploration"></a>
-                    <p>Utilizing SQL Server to delve into comprehensive global COVID-19 data, examining trends, patterns, and insights to aid in understanding the pandemic's impact across different regions and populations. This exploration involves querying and analyzing vast datasets to uncover valuable epidemiological and public health insights.</p>
-                    <ul class="actions special">
-                        <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid_19%20_Data_Exploration.sql" class="button">View Project</a></li>
-                    </ul>
-                </article>
-
-                <!-- Post -->
-                <article>
-                    <header>
-                        <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb">Movie Correlation</a></h2>
-                    </header>
-                    <a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb" class="image fit"><img src="images/movies.jpg" alt="Movie Correlation"></a>
-                    <p>Employing Pandas, Matplotlib, and Seaborn to conduct a detailed analysis of factors influencing substantial revenue in the movie industry. This involves examining variables such as genre, budget, marketing spend, release timing, and critical acclaim to identify correlations and trends that drive box office success and inform strategic decisions in film production and distribution.</p>
-                    <ul class="actions special">
-                        <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb" class="button">View Project</a></li>
-                    </ul>
-                </article>
-
-                <!-- Post -->
-                <article>
-                    <header>
-                        <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike_Sharing_Data_Analysis.Rmd">Bike Sharing Data Analysis</a></h2>
-                    </header>
-                    <a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike_Sharing_Data_Analysis.Rmd" class="image fit"><img src="images/Bicycle.jpg" alt="Bike Sharing Project"></a>
-                    <p>Offering a thorough analysis, visualizations, actionable insights, and strategic recommendations customized for the marketing team and stakeholders. By leveraging data-driven approaches, it ensures alignment with business objectives and maximizes return on investment (ROI).</p>
-                    <ul class="actions special">
-                        <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike_Sharing_Data_Analysis.Rmd" class="button">View Project</a></li>
-                    </ul>
-                </article>
-
-            </section>
+            <!-- Featured Post -->
+            <article>
+                <header>
+                    <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike_Sharing_Data_Analysis.Rmd">Bike Sharing Data Analysis</a></h2>
+                </header>
+                <a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike_Sharing_Data_Analysis.Rmd" class="image fit"><img src="images/Bicycle.jpg" alt="Bike Sharing Project"></a>
+                <p>Offering a thorough analysis, visualizations, actionable insights, and strategic recommendations customized for the marketing team and stakeholders. By leveraging data-driven approaches, it ensures alignment with business objectives and maximizes return on investment (ROI).</p>
+                <ul class="actions special">
+                    <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike_Sharing_Data_Analysis.Rmd" class="button">View Project</a></li>
+                </ul>
+            </article>
 
         </div>
 
