--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             </article>
 
             <!-- Featured Post -->
-            <article>
-                <header>
+            <article class="post featured">
+                <header class="major">
                     <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid_19%20_Data_Exploration.sql">COVID 19 Data Exploration</a></h2>
+                    <p>Utilizing SQL Server to delve into comprehensive global COVID-19 data, examining trends, patterns, and insights to aid in understanding the pandemic's impact across different regions and populations. This exploration involves querying and analyzing vast datasets to uncover valuable epidemiological and public health insights.</p>
                 </header>
                 <a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid_19%20_Data_Exploration.sql" class="image fit"><img src="images/covid.jfif" alt="COVID 19 Data Exploration"></a>
-                <p>Utilizing SQL Server to delve into comprehensive global COVID-19 data, examining trends, patterns, and insights to aid in understanding the pandemic's impact across different regions and populations. This exploration involves querying and analyzing vast datasets to uncover valuable epidemiological and public health insights.</p>
                 <ul class="actions special">
                     <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid_19%20_Data_Exploration.sql" class="button">View Project</a></li>
                 </ul>
@@ -86,25 +86,25 @@
             </article>
 
             <!-- Featured Post -->
-            <article>
-                <header>
+            <article class="post featured">
+                <header class="major">
                     <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb">Movie Correlation</a></h2>
+                    <p>Employing Pandas, Matplotlib, and Seaborn to conduct a detailed analysis of factors influencing substantial revenue in the movie industry. This involves examining variables such as genre, budget, marketing spend, release timing, and critical acclaim to identify correlations and trends that drive box office success and inform strategic decisions in film production and distribution.</p>
                 </header>
                 <a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb" class="image fit"><img src="images/movies.jpg" alt="Movie Correlation"></a>
-                <p>Employing Pandas, Matplotlib, and Seaborn to conduct a detailed analysis of factors influencing substantial revenue in the movie industry. This involves examining variables such as genre, budget, marketing spend, release timing, and critical acclaim to identify correlations and trends that drive box office success and inform strategic decisions in film production and distribution.</p>
-                <ul class="actions special">
+                    <ul class="actions special">
                     <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb" class="button">View Project</a></li>
                 </ul>
             </article>
 
             <!-- Featured Post -->
-            <article>
-                <header>
+            <article class="post featured">
+                <header class="major">
                     <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike_Sharing_Data_Analysis.Rmd">Bike Sharing Data Analysis</a></h2>
+                    <p>Offering a thorough analysis, visualizations, actionable insights, and strategic recommendations customized for the marketing team and stakeholders. By leveraging data-driven approaches, it ensures alignment with business objectives and maximizes return on investment (ROI).</p>
                 </header>
                 <a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike_Sharing_Data_Analysis.Rmd" class="image fit"><img src="images/Bicycle.jpg" alt="Bike Sharing Project"></a>
-                <p>Offering a thorough analysis, visualizations, actionable insights, and strategic recommendations customized for the marketing team and stakeholders. By leveraging data-driven approaches, it ensures alignment with business objectives and maximizes return on investment (ROI).</p>
-                <ul class="actions special">
+                    <ul class="actions special">
                     <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike_Sharing_Data_Analysis.Rmd" class="button">View Project</a></li>
                 </ul>
             </article>
