--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
             <!-- Featured Post -->
             <article class="post featured">
                 <header class="major">
-                    <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb">Movie Correlation</a></h2>
-                    <p>Employing Pandas, Matplotlib, and Seaborn to conduct a detailed analysis of factors influencing substantial revenue in the movie industry. This involves examining variables such as genre, budget, marketing spend, release timing, and critical acclaim to identify correlations and trends that drive box office success and inform strategic decisions in film production and distribution.</p>
+                    <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation_Analysis.ipynb">Movie Correlation Analysis</a></h2>
+                    <p>In this project, I analyze a dataset containing detailed information about various movies, including release dates, budgets, earnings, ratings, and more. The primary goal is to understand the relationships between different movie features and how they impact movie earnings.</p>
                 </header>
-                <a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb" class="image fit"><img src="images/movies.jpg" alt="Movie Correlation"></a>
+                <a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation_Analysis.ipynb" class="image fit"><img src="images/movies.jpg" alt="Movie Correlation"></a>
                     <ul class="actions special">
-                    <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation.ipynb" class="button">View Project</a></li>
+                    <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies_Correlation_Analysis.ipynb" class="button">View Project</a></li>
                 </ul>
             </article>
 
