--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
             <!-- Featured Post -->
             <article class="post featured">
                 <header class="major">
+                    <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Unsupervised%20Learning%20for%20Whisky%20Taste%20Segmentation.ipynb">Unsupervised Learning for Whisky Taste Segmentation</a></h2>
+                    <p>This project uses unsupervised learning (K-Means and Hierarchical Clustering) to group Scottish single malt whiskies based on their flavor profiles like smokiness, fruitiness, and floral notes. By analyzing these clusters, the project reveals distinct taste groups linked to whisky regions such as Islay and the Highlands. The results include clear visualizations and provide a foundation for a basic whisky recommendation system. This shows how machine learning can help personalize whisky choices for both fans and sellers.</p>
+                </header>
+                <a href="https://github.com/Yatir1990/Portfolio/blob/main/Unsupervised%20Learning%20for%20Whisky%20Taste%20Segmentation.ipynb" class="image main"><img src="images/cover_image.jpg" alt="Market Basket Analysis"></a>
+                <ul class="actions special">
+                    <li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Unsupervised%20Learning%20for%20Whisky%20Taste%20Segmentation.ipynb" class="button large">View Project</a></li>
+                </ul>
+            </article>
+
+            <!-- Featured Post -->
+            <article class="post featured">
+                <header class="major">
                     <h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb">Market Basket Analysis</a></h2>
                     <p>Analyzing a retail company's randomized sales data to uncover purchasing patterns and associations between frequently bought products using data preprocessing, feature engineering, and market basket analysis techniques, including the FP-Growth algorithm. The insights derived from this analysis aim to optimize product placement and promotions, ultimately enhancing sales strategy and customer satisfaction.</p>
                 </header>
